# project-dashboard

./: .coderabbit.yaml  .gitignore  LICENSE  README.md  nuxt.config.ts  package.json  tailwind.config.js
.github/workflows/: auto-test.yaml
src/: app.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/foundations/: package_json.rs
src-tauri/tests/: package_json_test.rs
src/components/atoms/: Button.vue  TextInput.vue
src/components/domains/: ScriptsList.vue  ScriptsStdout.vue
src/components/domains/InlineAlert/: InlineAlert.vue
src/components/domains/InlineAlert/privates/: README.md  alert.ts
src/styles/: colors.ts
